--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
-
+    <title>Pdubbs Solutions | Dashboard </title>   
+    <meta   <a target="_blank" href="https://pdubbssolutions.web.app/"></a>>
+    <link rel="stylesheet" type="text/css" href="app/static/css/index.css">
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/10.14.1/firebase-app-compat.js"></script>
     <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/10.14.1/firebase-auth-compat.js"></script>
+  <!--- <script defer src="/__/firebase/10.14.1/firebase-auth-compat.js"></script>
     <script defer src="/__/firebase/10.14.1/firebase-database-compat.js"></script>
     <script defer src="/__/firebase/10.14.1/firebase-firestore-compat.js"></script>
     <script defer src="/__/firebase/10.14.1/firebase-functions-compat.js"></script>
@@ -23,30 +25,89 @@
     -->
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
   </head>
   <body>
+    <header>
+      <h1>Welcome, <%= user name %!></h1>
+      <nav>
+        <a href="/">Home</a>
+        <a href="/login">Login</a>
+        <a href="/register">Create an Account</a>
+      </nav>
+    </header>
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+    
+      // Your web app's Firebase configuration
+      const firebaseConfig = {
+        apiKey: "AIzaSyAwwveYRqdPTsnLosZJzR8L-jk8DjzwvLo",
+        authDomain: "pdubbs-final.firebaseapp.com",
+        databaseURL: "https://pdubbs-final-default-rtdb.firebaseio.com",
+        projectId: "pdubbs-final",
+        storageBucket: "pdubbs-final.appspot.com",
+        messagingSenderId: "980654735004",
+        appId: "1:980654735004:web:9346cd6edee1080d203759"
+      };
+    
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+    </script>
+    <section>
     <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
+      <h2>Your Dashboard</h2>
+      <p>Email: <%= user.username %></p>
+      <h3>Resources & Tools</h3>
+      <ul>
+        <li><a>Templates</a></li>
+        <li><a>Bundles </a></li>
+        <li><a>Products</a></li>
+        <li><a>Downloads</a></li>
+      </ul>
+      <a target="_blank" href="https://pdubbssolutions.web.app/">Dashboard</a>
     </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
-
+    </section>
+    <section id="custom-request">
+      <h2>Submit a Custom Request</h2>
+      <form actions="/request-document" method="POST" enctype="multipart/form-data">
+        <input type="text" name="name" placeholder="Provide your First & Last Name." required>
+        <input type="number" name="phoneNumber" placeholder="Phone Number" required">
+        <input type="email" name="email" placeholder="Email Address" required >
+        <textarea name="details" placeholder="Customization details" required></textarea>
+        <input type="file" name="document" required>
+        <button type="submit">Submit Custom Request</button>
+      </form>
+    </section>
+    <section id="book-session">
+      <h2>Book a 1:1 Zoom Session</h2>
+      <form action="/book-session" method="POST">
+        <input type="text" name="name" placeholder="Provide your First and Last Name" required>
+        <input type="email" name="email" placeholder="Email Address" required>
+        <input type="date" name="date" required>
+        <input type="time" name="time" reuqired>
+        <label for="sessionDuration" required>Choose your session length:</label><br>
+        <input type="radio" id="session30" name="sessionDuration" value="30min" >
+        <label for="session30">30 minutes - $50 + hst</label><br>
+        <input type="radio" id="session60" name="sessionDuration" value="60min">
+        <label for="session60">60 minutes - $90 + hst</label><br>
+        <input type="radio" id="session90" name="sessionDuration" value="90min">
+        <label for="session90">90 minutes - $120 +hst</label><br>
+        <button type="submit">Book 1:1 Zoom Session</button>
+      </form>
+      <h2>Book a Group Zoom Session</h2>
+    </section>
+    <section id="partnership">
+      <h2>Request a Client & Vendor Partnership</h2>
+      <form action="/request-partnership" method="POST">
+        <input type="text" name="companyName" placeholder="Company Name" reuqired">
+        <input type="text" name="companyAddress" placeholder="Provide your Business Address" required>
+        <input type="email" name="email" placeholder="Email Address" required">
+        <textarea name="message" placeholder="Partnership Details" required></textarea>
+        <button type="submit">Submit Partnerhsip Request</button>
+      </form>
+    </section>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         const loadEl = document.querySelector('#load');
@@ -85,5 +146,9 @@
         }
       });
     </script>
+    <footer>
+      <p>PdubbsSolutions | Administrative & Project Management Services</p>
+    </footer>
+    <script src="app/static/js/index.js"></script>
   </body>
 </html>
