--- a/public/app/index.html
+++ b/public/app/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE-edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <meta http-equiv="refresh" content="url=https://pdubbs-final.web.app">
+      <meta http-equiv="refresh" content="url=https://pdubbs-final.web.app" name="Pdubbs Solutions">
       <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
       <link rel="stylesheet"  type="text/css" href="/public/app/static/styles.css" />
       <title>Pdubbs Solutions | Dashboard</title>
