--- a/public/app/index.html
+++ b/public/app/index.html
@@ -108,6 +108,7 @@
                       </form>
                    </section>
                 </div>
+                    <div class="filter-container">
                     <div class="filter-item">
                         <form action="/book-session" method="POST" enctype="multipart/form-data">
                             <h2>Book a 1:1 Zoom Session <span style="color: #a8738a;" class="arrow">➤</span></h2>
@@ -131,6 +132,8 @@
                             </section>
                         </form>
                     </div>
+                </div>
+                <div class="filter-container">
                     <div class="filter-item">
                         <h2>Request a Client & Vendor Partnership<span style="color: #a8738a;"class="arrow">➤</span></h2>
                             <section id="partnership">
@@ -145,25 +148,12 @@
                             </section>
                         </div>
                 </div>
-                <script>
-                    function adjustOverflow(hasFilterResults){
-                        const container = document.querySelector('.filter-container');
-                        if (hasFilterResults) {
-                            container.style.overflow= 'visible';
-                        } else {
-                            container.style.overflow = 'hidden'
-                        }
-                    }                                   
-                    adjustOverflow(true);
-                    adjustOverflow(false);
-                </script>
-            </div>
                 <footer><br>
                     <div style="display: inline; margin-top: 0px; text-decoration: none;"  class="auth-buttons"><a href="/public\app\static\pages\login.html">Login</a> | <a href="/public\app\static\pages\register.html">Register</a> | <a href="/public\app\static\pages\contact.html">Contact</a> | <a href="/public\app\static\pages\cart.html">Cart</a></div><br>
                     <div class="ref-buttons">
-                        <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="termsandconditions.html">Terms and Conditions</a> |
-                        <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="accessibility.html">Accessibility</a> |
-                        <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="sources">Sources</a>
+                        <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/termsandconditions.html">Terms and Conditions</a> |
+                        <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/accessibility.html">Accessibility</a> |
+                        <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/sources">Sources</a>
                     </div>
                     <span style="display:inline; margin-top: 20px;" >Pdubbs Solutions |  Administrative & Project Management Services</span><br>
                      <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;"></div>
