git commit to main

--- a/public/app/static/pages/termsandconditions.html
+++ b/public/app/static/pages/termsandconditions.html
@@ -65,32 +65,32 @@
          </p><br>
          <h2>Taxes and Duties</h2>
          <p class="content-paragraph">
-            <span class="bold">6.1 </span><br>
-            <span class="bold">6.2 </span>
+            <span class="bold">6.1 </span>All taxes applicable to your order will be calculated at checkout based on your location and included in the final price.<br>
+            <span class="bold">6.2 </span>For international orders, you may be subject to additional customs duties and import taxes, which are the responsibility of the customer.
          </p><br>
          <h2>Customer Account</h2>
          <p class="content-paragraph">
-            <span class="bold">7.1 </span><br>
-            <span class="bold">7.2 </span>
+            <span class="bold">7.1 </span>You may choose to create a customer account during the checkout process for easier future purchases.<br>
+            <span class="bold">7.2 </span>It is <b>your responsibility</b> to maintain the confidentiality of your account credentials and to ensure that all information provided is accurate and up-to-date.
          </p><br>
          <h2>Order Changes and Modifications</h2>
          <p class="content-paragraph">
-            <span class="bold">8.1 </span><br>
-            <span class="bold">8.2 </span>
+            <span class="bold">8.1 </span>You may request modifications to your order (such as changes to shipping information) before the order is processed by contacting <span class="bold">pdubbssolutions@gmail.com</span>.<br>
+            <span class="bold">8.2 </span>Once the order has been processed or shipped, no changes can be made.
          </p><br>
          <h2>Dispute Resolution</h2>
          <p class="content-paragraph">
-            <span class="bold">9.1 </span><br>
-            <span class="bold">9.2 </span>
+            <span class="bold">9.1 </span>Any disputes arirsing out of or related to your purchase will be goverend by the laws of the Canadian Arbitiration Association.<br>
+            <span class="bold">9.2 </span>In the event of a dispute, you agree to first attempt to resolve the issue by contacting <span class="bold">Pdubbs Solutions </span> directly at <span class="bold">pdubbssolutions@gmail.com </span>before pursuing other remedies.
          </p><br>
          <h2>Limitation of Liability</h2>
          <p class="content-paragraph">
-            <span class="bold">10.1 </span><br>
-            <span class="bold">10.2 </span>
+            <span class="bold">10.1 </span>To the fullest extent permitted by law, <span class="bold">Pdubbs Solutions </span> is not liable for any direct, indirect, incidental, or consequential damages arising from your use of our website or products.<br>
+            <span class="bold">10.2 </span>We do not guarntee that our website or services will be free from erros, and we are not responsible for any distuptions or delays in processing your order due to technical issues.
          </p><br>
          <h2>Force Majeure</h2>
          <p class="content-paragraph">
-            <span class="bold">11.1</span>
+            <span class="bold">11.1</span> We are not liable for any failure to perform your obligations under these terms due to events byond our reasonable control, including but not limited to natural disasters, strikes, or disruptions to shipping networks.
          </p><br>
          <h2>Privacy</h2>
          <p class="content-paragraph">
@@ -102,6 +102,9 @@
             <span class="bold">13.1 </span>We reserve the right to modify these terms and conditions at any time, and any changes will be posted on this page.<br>
             <span class="bold">13.2 </span>Your continued use of the website or completion of checkout after any changes to the terms signifies your acceptance of the updated terms.
          </p><br>
+         <div onclick="document.documentElement.scrollTop = 0; document.body.scrollTop = 0;" style="cursor: pointer; margin-left: -150px;" class="toppage">
+            Go to Top of Page
+        </div>
          <h1 style=" margin-top: 5px; font-size: 16px; color:black;">Service Request Terms and Conditions</h1><hr>
          <p class="content-paragraph">By submitting a service request to pdubbssolutions.com | pdubbssolutions@gmail.com
             | pdubbssolutions.ca | and/or | pdubbs-final.web.app, you agree to the following contidtions. <br>Please
