--- a/src/static/pages/accessibility.html
+++ b/src/static/pages/accessibility.html
@@ -16,9 +16,9 @@
       <script defer src="/__/firebase/init.js?useEmulator=true"></script>
       <link rel="stylesheet"  type="text/css" href="/src/static/styles.css" />
       <title>Pdubbs Solutions | Accessibility</title>
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&amp;display=swap" rel="stylesheet" />
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
       <div style="margin-left: 655px;" class="navbar"><a href="/public\index.html">Home</a></div>
       <div style="margin-top: -25px;" class="back" onclick="goBackOrDashboard()">Back</div>
     </head>
@@ -41,7 +41,7 @@
           <li>Incorporating assistive technologies, like screen readers and keyboard navigation.</li>
         </ul><br>
         <h2>Feedback</h2>
-        <p class="content-paragraph">We welcome your feedback on the accessibility of PDubbs Solutions. If you encounter any accessibility barriers, please contact us via <a href="contact.html">this form</a> or at pdubbssolutions@gmail.com. </p><br>
+        <p class="content-paragraph">We welcome your feedback on the accessibility of PDubbs Solutions. If you encounter any accessibility barriers, please contact us via <a href="/contact.html">this form</a> or at pdubbssolutions@gmail.com. </p><br>
         <h2>Conformance Status</h2>
         <p class="content-paragraph">Our website aims too comply with WCAG 2.1 Level AA standards. We are continously working to meet these guidelines and imporve the accessibility of all our digital properties.</p>
       </div>
