--- a/src/static/pages/termsandconditions.html
+++ b/src/static/pages/termsandconditions.html
@@ -12,31 +12,92 @@
            window.location.replace("https://pdubbssolutions.ca");
          }
       </script>
-      <style>
-         h2{ text-align: center; align-items: center; margin: 0 auto;}
-      </style>
       <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
       <script defer src="/__/firebase/init.js?useEmulator=true"></script>
       <link rel="stylesheet"  type="text/css" href="/src\static\styles.css" />
-      <title> Terms &amp;amp; Conditions </title>
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet" />
+      <title> Terms &amp; Conditions </title>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
       <div style="margin-left: 655px;" class="navbar"><a href="/public/index.html">Home</a></div>
       <div style="margin-top: -25px;" class="back" onclick="goBackOrDashboard()">Back</div>
     </head>
 <body>
    <style>
-      h2{ text-align: center; align-items: center; margin: 0 auto;}
+      h2{ text-align: left; align-items: center; margin: 0 auto;}
+      #toggleUp, #toggleUp1, #toggleUp2{cursor: pointer; color:#aaafb2; font-size: 20px; padding: 0; position: absolute;margin: 0px auto; display:block; left: 95px;}
+     #toggleUp,  #toggleUp1:hover, #toggleUp2:hover{cursor: pointer; color:#a8738a; font-weight: bold; font-size:23px; transform: 0.1s ease;}
    </style>
    <header>
        <img style="z-index: -999; position: relative; top: -5px; max-width: 200px; padding: 0; display: block; margin: 0 auto; cursor: pointer; max-height: 200px;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" onclick="goHome()" />
    </header>
    <div class="sources-container">
-      <h1 id="dashboard-text" style="text-align: center; font-size: 1.3rem; margin-top: -55px; padding: 0;"><span> Terms
-            and Conditions</span></h1>
+      <h1 id="dashboard-text" style="text-align: center; font-size: 1.3rem; margin-top: -55px; padding: 0;"><span> Terms &amp; Conditions</span></h1>
       <hr>
       <div class="accesibility" style="scroll-behavior: smooth; scrollbar-color: inherit; display:inline; flex-direction: column; text-align: center;max-width:550px;">
+         <h1 style=" margin-top: 5px; font-size: 16px; color:olivedrab;">Online Purchases &amp; Document Access Terms and Conditions</h1>
+         <p class="content-paragraph">
+            By accessing and using this website (pdubbssolutions.ca) or making any purchase through this website, you agree to the following terms and conditions. Please read these terms carfully before proceeding with any purchase or accessing any documents. If you do not agree with these terms, please do not use our services or access our content.
+         </p><br>
+         <h2>General Information</h2>
+         <p class="content-paragraph">
+            <span class="bold">1.1 </span>This website is owned and operated by <span class="bold">Pdubbs Solutions </span>, referred to as "we", "us," or "our".<br>
+            <span class="bold">1.2 </span>By accessing our website or purchasing from us, you are agreeing to be bound by these terms and any applicable laws and regulations.<br>
+            <span class="bold">1.3 </span>These terms and conditions apply to all users of the site, including without limitation users who are browsers, vendors, customers, merchants, and contributors of content.
+         </p><br>
+         <h2>Eligibility</h2>
+         <p class="content-paragraph">
+            <span class="bold">2.1 </span>You must be at least 18 years of age or the legal age of majorirty in your jurisdiction to make a purchase on this site.<br>
+            <span class="bold">2.2 </span>By placing an order, you represent that you are legally capable of entering into binding contracts.
+         </p><br>
+         <h2>Purchases and Payments</h2>
+         <p class="content-paragraph">
+            <span class="bold">3.1 </span>All purchases made on pdubbssolutions.com and/or pdubbssolutions.ca are subject to availability and confirmation of the porder price.<br>
+            <span class="bold">3.2 </span>We reserve the right to refuse or cancel any order at any time for reasons including but not limited to the availability of the product, errors in the description or price, or suspicion of fraudulent activity.<br>
+            <span class="bold">3.3 </span>Prices for our products and services are subject to change without notice.<br>
+            <span class="bold">3.4 </span>Payment for all purchases must be made via PayPal, Stripe, Mastercard, Visa, and Debit, and you agree to provide accurate and complete payment details.<br>
+            <span class="bold">3.5 </span>All prices are in CAD and include applicable taxes unless otherwise stated.
+         </p><br>
+         <h2>Delivery of Products</h2>
+         <p class="content-paragraph">
+            <span class="bold">4.1 </span>Digital products will be dlivered electronically via download links sent to your provided email address or via access on your account.<br>
+            <span class="bold">4.2 </span>We strive to deliver digital products promptly; however, we do not guarantee immediate access due to potential technical issues.<br>
+            <span class="bold">4.3 </span>You are responsible for provided correct contact information and ensuring you have access to the email account use for purchase and account creation.
+         </p><br>
+         <h2>Refunds and Returns</h2>
+         <p class="content-paragraph">
+            <span class="bold">5.1 </span>All sales are final for digital products. Once a product is downloaded or accessed, it is considered non-refundable.<br>
+            <span class="bold">5.2 </span>In cases where a product is defective, please contact us at pdubbssolutions@gmail.com within 3-5 business days of purchase for assistance.<br>
+            <span class="bold">5.3 </span>We reserve the right to determine whether a product is defective and may, at our discretion, offer a replacement or refund.
+         </p><br>
+         <h2>Document Access</h2>
+         <p class="content-paragraph">
+            <span class="bold">6.1 </span>By accessing or downloading any documents from our site, you acknowledge that the documents are provided for your personal use and may not be redistributed, shared, or sold without prior written concent.<br>
+            <span class="bold">6.2 </span>You agree not to misuse the documents in any way that infringes upon intellectual property rights or violates applicable laws.
+         </p><br>
+         <h2>Intellectual Property</h2>
+         <p class="content-paragraph">
+            <span class="bold">7.1 </span>All content, including but not limited to text, graphics, logos, and documents provided on pdubbssolutions.com and pdubbssolutions.ca<b> is the intellectual property of </b><span class="bold">Pdubbs Solutions </span><br>
+            <span class="bold">7.2 </span> <b> You may not reproduce,  distribute, or create </b>derivative works from any of the content without express written permission from us.
+         </p><br>
+         <h2>Limitation of Liability</h2>
+         <p class="content-paragraph">
+            <span class="bold">8.1 </span>To the fullest extent permitted by law, <span class="bold">Pdubbs Soltuions </span>will not be liable for any direct, indirect, incidental, or consequential damages arising from the use of, or inability to use, our website, products, or services.<br>
+            <span class="bold">8.2 </span>We do not guarantee that the website will be error-free or that access will be uniterrupted.
+         </p><br>
+         <h2>Governing Law</h2>
+         <p class="content-paragraph">
+            <span class="bold">9.1 </span>These terms and coniditons shall be goverened and construed in accordance with the laws of <b>Ontario, </b>without regard to itis conflict of law provisions.
+         </p><br>
+         <h2>Changes to Terms and Conditions</h2>
+         <p class="content-paragraph">
+            <span class="bold">10.1 </span>We rerserve the right to modify these terms at any time.<br>
+            <span class="bold">10.2 </span>Changes to the terms will be posted on this page, and your continued use of the website or services following any changes indicates your acceptance of the new terms.
+         </p><br>
+         <hr>
+         <div onclick="document.documentElement.scrollTop = 0; document.body.scrollTop = 0;" class="toggleUp1">
+            <span id="toggleUp1">&#8593;</span>
+        </div>
          <h1 style=" margin-top: 5px; font-size: 16px; color:olivedrab;">Checkout Terms and Conditions</h1>
          <p class="content-paragraph">
             By completing a purchase on pdubbssolutions.com | pdubbssolutions@gmail.com | pdubbssolutions.ca | and/or | pdubbs-final.web.app, you agree to the following terms and conditions. Please read thse terms carefully before proceeding with your order. If you do not agree to these terms, you may not complete the checkout process.
@@ -112,10 +173,10 @@
             <span class="bold">13.1 </span>We reserve the right to modify these terms and conditions at any time, and any changes will be posted on this page.<br>
             <span class="bold">13.2 </span>Your continued use of the website or completion of checkout after any changes to the terms signifies your acceptance of the updated terms.
          </p><br>
-         <div onclick="document.documentElement.scrollTop = 0; document.body.scrollTop = 0;" style="cursor: pointer; margin-left: -110px;" class="toppage">
-            <span style="font-size:18px; color:#aaafb2;">&#8593;</span>
-        </div>
-         <h1 style=" margin-top: 5px; font-size: 16px; color:olivedrab;">Service Request Terms and Conditions</h1><hr>
+         <div onclick="document.documentElement.scrollTop = 0; document.body.scrollTop = 0;" class="toggleUp1">
+            <span id="toggleUp">&#8593;</span>
+        </div><hr>
+         <h1 style=" margin-top: 5px; font-size: 16px; color:olivedrab;">Service Request Terms and Conditions</h1>
          <p class="content-paragraph">By submitting a service request to pdubbssolutions.com | pdubbssolutions@gmail.com
             | pdubbssolutions.ca | and/or | pdubbs-final.web.app, you agree to the following contidtions. <br>Please
             read these terms and coniditions carefully before proceedign with your request. If you do not agree with
@@ -208,8 +269,8 @@
             </p>
       </div>
    </div>
-   <div onclick="document.documentElement.scrollTop = 0; document.body.scrollTop = 0;" style="cursor: pointer; margin-left: 30px;" class="toppage">
-      Go to Top of Page
+   <div onclick="document.documentElement.scrollTop = 0; document.body.scrollTop = 0;" class="toggleUp1">
+      <span id="toggleUp2">&#8593;</span>
   </div>
   </body>
 <script type="text/javascript" src="/public\app\static\index.mjs"></script>
@@ -229,7 +290,5 @@
    <div
       style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;">
    </div>
-     
 </footer>
-
 </html>
