--- a/src/static/pages/termsandconditions.html
+++ b/src/static/pages/termsandconditions.html
@@ -273,9 +273,9 @@
       <span id="toggleUp2">&#8593;</span>
   </div>
   </body>
-<script type="text/javascript" src="/public\app\static\index.mjs"></script>
-<script type="text/javascript" src="/src\app.mjs"></script>
-<script type="text/javascript" src="/public/app/static/js/express.mjs"></script>
+   <script type="text/javascript" src="/src/index.mjs"></script>
+   <script type="text/javascript" src="/src/app.js"></script>
+   <script type="text/javascript" src="/src/static/js/express.js"></script>
    <hr>
    <footer style="z-index: 999">
    <div class="ref-buttons">
@@ -283,7 +283,7 @@
          Conditions</a> |
       <a class="accessibility-link" style="font-size: 12px; text-decoration: none; color:#aaafb2;"
          href="accessibility.html">Accessibility</a> |
-      <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="sources">Sources</a>
+      <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="sources.html">Sources</a>
    </div>
    <span style="text-align: center; font-weight:bold; justify-content: center; "><p>Pdubbs Solutions |
       Administrative &amp; Project Management Services </p></span><br>
