--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html style="overflow: hidden;">
-
 <head>
    <meta charset="utf-8" />
    <meta http-equiv="X-UA-Compatible" content="IE-edge" />
@@ -35,8 +34,6 @@
    </script>
    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 </head>
-
-<body>
    <script type="module">
       import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
       const firebaseConfig = {
@@ -70,10 +67,13 @@
                </div>
             </div>
          </div>
+   </div>
+   <div>
          <h1 id="dashboard-text" style="text-align: center; font-size: 2rem; margin-top: -15px; padding: 0;"><span>
                Welcome to your Dashboard!</span></h1>
-      </div>
-   </header>
+   </div>
+</header>
+<body>
    <nav>
       <div class="icon-container">
          <div class="dashboard-icons">
@@ -128,67 +128,63 @@
    <br><br><br><br><br>
    <br>
    <div class="filter-container">
-      <div class="filter-section">
          <div class="filter-item">
-            <h2>Submit a Custom Request <span style="color: #a8738a;" class="arrow">➤</span></h2>
-            <section id="custom-request">
-               <form action="/request-document" method="POST" enctype="multipart/form-data">
-                  <input type="text" name="first-name" autocomplete="given-name" placeholder="First Name"
-                     required /><br>
-                  <input type="text" name="last-name" autocomplete="family-name" placeholder="Last Name" required /><br>
-                  <input type="number" name="phoneNumber" placeholder="Phone Number" required /><br>
-                  <input type="email" autocomplete="email" name="email" placeholder="Email Address" required /><br>
-                  <textarea name="details" placeholder="Customization details" required></textarea><br>
-                  <input style="cursor: pointer;" id="choose-file" type="file" name="document" required /><br>
-                  <button id="dashboard-submit" type="submit">Submit Custom Request</button>
-               </form>
+            <h2 slass="formHeader" onclick="toggleForm()">Submit a Custom Request <span style="color: #a8738a;" class="arrow">➤</span></h2>
+            <section id="custom-request" class="form-container" style="display:none;">
+                <div id="requestDocument" class="form-container">
+                    <form action="/requestDocument" method="POST" enctype="multipart/form-data">
+                        <input type="text" name="first-name" autocomplete="given-name" placeholder="First Name" required /><br>
+                        <input type="text" name="last-name" autocomplete="family-name" placeholder="Last Name" required /><br>
+                        <input type="number" autocomplete="tel" name="phoneNumber" placeholder="Phone Number" required /><br>
+                        <input type="email" autocomplete="email" name="email" placeholder="Email Address" required /><br>
+                        <textarea  style="width: 70%;" id="requestDocument1" name="details" placeholder="Customization details" required></textarea><br>
+                        <input style="cursor: pointer;" id="choose-file" type="file" name="document" required /><br>
+                        <button id="dashboardSubmit" type="submit">Submit Custom Request</button>
+                    </form>
+                </div>
             </section>
-         </div>
-         <div class="filter-container">
-            <div class="filter-item">
-               <form action="/book-session" method="POST" enctype="multipart/form-data">
-                  <h2>Book a 1:1 Zoom Session <span style="color: #a8738a;" class="arrow">➤</span></h2>
-                  <section id="book-session">
-                     <input type="text" name="first-name" autocomplete="given-name" placeholder="First Name"
-                        required /><br>
-                     <input type="text" name="last-name" autocomplete="family-name" placeholder="Last Name"
-                        required /><br>
+        </div>
+      </div>        
+      <div class="filter-container">
+         <div class="filter-item">
+             <h2 class="formHeader1" onclick="toggleForm()">Book a 1:1 Zoom Session <span style="color: #a8738a ;" class="arrow" >➤</span></h2>
+             <section id="book-session" class="form-container" style="display: none;">
+               <div id="requestSession">
+                 <form action="/requestSession" method="POST" enctype="multipart/form-data">
+                     <input type="text" name="first-name" autocomplete="given-name" placeholder="First Name" required /><br>
+                     <input type="text" name="last-name" autocomplete="family-name" placeholder="Last Name" required /><br>
                      <input type="email" autocomplete="email" name="email" placeholder="Email Address" required /><br>
                      <input type="date" name="date" required /><br>
                      <input type="time" name="time" required /><br>
-                     <label for="sessionOptions">Select an Option:</label>
-                     <select id="sessionOptions" name="sessionOptions" onchange="toggleTextarea()">
-                        <option value="single">Single Session</option>
-                        <option value="recurring">Request Recurring Sessions</option>
+                  <div id="sessionOptions">
+                     <select class="sessionOptions" name="sessionOptions">
+                         <option value="single">Single Session</option>
+                         <option value="recurring">Request Recurring Sessions</option>
                      </select>
-                     <div id="recurringTextarea" style="display: none; margin-top: 10px;">
-                        <label for="recurringDetails">Please provide details for recurring sessions:</label>
-                        <textarea id="recurringDetails" name="recurringDetails" rows="4" cols="50"></textarea>
-                     </div>
-                     <button id="dashboard-submit1" type="submit">Book 1:1 Zoom Session</button>
-                  </section>
-               </form>
-            </div>
+                  </div>
+               
+                     <button id="dashboardSubmit1" type="submit">Book 1:1 Zoom Session</button>
+                 </form>
+               </div>
+             </section>
          </div>
-      </div>
-         <div class="filter-container">
-            <div class="filter-item">
-               <h2>Request a Client &amp; Vendor Partnership <span style="color: #a8738a;" class="arrow"> ➤ </span></h2>
-               <section id="partnership">
-                  <form action="/request-partnership" method="POST">
-                     <input type="text" autocomplete="organization" name="companyName" placeholder="Company Name"
-                        required /><br>
-                     <input type="text" autocomplete="street-address" name="companyAddress" autcomplete="street-address"
-                        placeholder="Provide your Business Address" required /><br>
-                     <input type="email" autocomplete="email" name="email" placeholder="Email Address" required /><br>
-                     <textarea name="message" placeholder="Partnership Details" required></textarea>
-                     <br>
-                     <button id="dashboard-submit2" type="submit">Submit Partnership Request</button>
-                  </form>
-               </section>
+     </div>
+     <div class="filter-container">
+      <div class="filter-item">
+          <h2 class="formHeader2" onclick="togglePartnershipForm()">Request a Client &amp; Vendor Partnership <span style="color: #a8738a;" class="arrow"> ➤ </span></h2>
+          <section id="partnership" class="form-container" style="display: none;">
+            <div id="requestPartnership">
+              <form action="/requestPartnership" method="POST">
+                  <input type="text" autocomplete="organization" name="companyName" placeholder="Company Name" required /><br>
+                  <input type="text" autocomplete="street-address" name="companyAddress" placeholder="Provide your Business Address" required /><br>
+                  <input type="email" autocomplete="email" name="email" placeholder="Email Address" required /><br>
+                  <textarea id="recurringTextarea1" name="message" placeholder="Partnership Details" required></textarea><br>
+                  <button id="dashboardSubmit2" type="submit">Submit Partnership Request</button>
+              </form>
             </div>
-         </div>
+          </section>
       </div>
+  </div>  
          <footer>
             <br>
             <div style="display: inline; margin-top: 0px; text-decoration: none;" class="auth-buttons"><a
@@ -218,8 +214,10 @@
          <script type="text/javascript" src="/src/static/js/express.js"></script>
          <script>
             function toggleTextarea() {
+               var bookSession = document.getElementById("recurringTextarea");
                var sessionOptions = document.getElementById("sessionOptions");
                var recurringTextarea = document.getElementById("recurringTextarea");
+               var partnership = document.getElementById("recurringTextarea1");
                if (sessionOptions.value === "recurring") {
                   recurringTextarea.style.display = "block";
                } else {
@@ -273,6 +271,5 @@
                }
             });
          </script>
-</body>
-
+   </body>
 </html>
