--- a/src/static/pages/accessibility.html
+++ b/src/static/pages/accessibility.html
@@ -33,16 +33,16 @@
         <p class="content-paragraph"><br>
           <span class="bold">PDubbs Solutions </span> is commited to ensuring digital accessibility for people with disabilities. We are continually improving the user experience for everyone and applying the relvant accessibility standards.
         </p><br>
-        <h2>Efforts to Support Accessibility</h2>
+        <h2 class="accessibilityHeading" id="accessibilityHeading">Efforts to Support Accessibility</h2>
         <p class="content-paragraph">PDubbs Solutions takes the following measures to ensure accessiblity:</p>
         <ul class="custom-list">
           <li>Continuous training for our team to improve accessibility.</li>
           <li>Conducting regular reviews and audits of our website content.</li>
           <li>Incorporating assistive technologies, like screen readers and keyboard navigation.</li>
         </ul><br>
-        <h2>Feedback</h2>
+        <h2 class="accessibilityHeading" id="accessibilityHeading1" >Feedback</h2>
         <p class="content-paragraph">We welcome your feedback on the accessibility of PDubbs Solutions. If you encounter any accessibility barriers, please contact us via <a href="/contact.html">this form</a> or at pdubbssolutions@gmail.com. </p><br>
-        <h2>Conformance Status</h2>
+        <h2 class="accessibilityHeading" id="accessibilityHeading2">Conformance Status</h2>
         <p class="content-paragraph">Our website aims too comply with WCAG 2.1 Level AA standards. We are continously working to meet these guidelines and imporve the accessibility of all our digital properties.</p>
       </div>
     </div>
@@ -53,7 +53,7 @@
       <div class="ref-buttons">
          <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src\static\pages\termsandconditions.html">Terms and Conditions</a> |
          <a style="font-size: 12px; text-decoration: none; color:olivedrab;" href="/src\static\pages\accessibility.html">Accessibility</a> |
-         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src\static\pages\sources.html">Sources</a>
+         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src\static\pages\sources.html">Sources</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/csspolicy.html">Policys &amp; Procedures</a>
       </div>
       <span style="display:inline; margin-top: 20px;" >Pdubbs Solutions |  Administrative &amp; Project Management Services</span><br>
       <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;"></div>
