--- a/src/static/pages/login.html
+++ b/src/static/pages/login.html
@@ -4,8 +4,8 @@
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE-edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <meta http-equiv="refresh" content="url=https://pdubbs-final.web.app">
-      <link rel="stylesheet"  type="text/css" href="/public/app/static/styles.css" />
+      <meta http-equiv="refresh" content="url=https://pdubbssolutions.ca"/>
+      <link rel="stylesheet"  type="text/css" href="/src/static/styles.css" />
       <title>Pdubbs Solutions | Login Page</title>
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,9 +13,9 @@
     </head>
 <body>
    <header>
-       <img style="z-index: -999; position: relative; top: 15px; max-width: 200px; padding: 0; display: block; margin: 0 auto; cursor: pointer; max-height: 200px;" src="/public/app/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" onclick="goHome()" />
+       <img style="z-index: -999; position: relative; top: 15px; max-width: 200px; padding: 0; display: block; margin: 0 auto; cursor: pointer; max-height: 200px;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" onclick="goHome()" />
    </header><h1 style="text-align: center; position: inherit; padding:0;" >Login</h1>
-   <p style="text-align: center;">Forgot your password? <a href="/public\app\static\views\forgot-password.ejs" id="login" >Reset Now </a></p>
+   <p style="text-align: center;">Forgot your password? <a href="/src/static/views/forgot-password.ejs" id="login" >Reset Now </a></p>
    <form id="loginForm">
       <label for="username" aria-placeholder="Username"></label>
       <input type="text" id="username" name="username" placeholder="Username" required />
@@ -24,8 +24,8 @@
       <label for="password" aria-placeholder="Password"></label>
       <input type="password" id="password" name="password" placeholder="Password" required />
       <button type="submit">Login</button>
-   </form>
-   <p style="text-align: center;">Want to reset your password? <a href="/public\app\static\views\reset-password.ejs" id="login1" >Reset Password </a></p>
+   </form><br>
+   <p style="text-align: center;">Want to reset your password? <a href="/src/static/views/reset-password.ejs" id="login1" >Reset Password </a></p>
    <script>
       document.getElementById('loginForm').addEventListener('submit', function(event) {
          event.preventDefault();
@@ -38,17 +38,21 @@
          }
       });
    </script>
-</body>
-<footer><br>
-   <div style="display: inline; margin-top: 0px; text-decoration: none;"  class="auth-buttons"><a href="/public\app\static\pages\login.html">Login</a> | <a href="/public\app\static\pages\register.html">Register</a> | <a href="/public\app\static\pages\contact.html">Contact</a> | <a href="/public\app\static\pages\cart.html">Cart</a></div><br>
-   <div class="ref-buttons">
-      <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="termsandconditions.html">Terms and Conditions</a> | <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="accessibility.html">Accessibility</a> | <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="sources">Sources</a>
-   </div>
-   <span style="display:inline; margin-top: 20px;" >Pdubbs Solutions |  Administrative &amp; Project Management Services</span><br>
-   <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;"></div>
-   <img style="position: absolute; max-width: 100px; padding: 0; max-height: 100px; margin-top: -20px; cursor: pointer;  z-index: -999; align-self: center; left: 400px; position:absolute;" src="/public/app/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" id="footer-logo" onclick="goHome()" />
+
+  <footer><hr>
+   <div style="display: inline; margin-top: 0px; text-decoration: none;"  class="auth-buttons"><a href="/src\static\pages\login.ejs">Login</a> | <a href="/src\static\pages\register.ejs">Register</a> | <a href="/src\static\pages\contact.html">Contact</a> | <a href="/src\static\pages\cart.html">Cart</a></div>
+   <br>
+      <div class="ref-buttons">
+         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src\static\pages\termsandconditions.html">Terms and Conditions</a> |
+         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src\static\pages\accessibility.html">Accessibility</a> |
+         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src\static\pages\sources.html">Sources</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/csspolicy.html">Policys &amp; Procedures</a>
+      </div>
+      <span style="display:inline; margin-top: 20px;" >Pdubbs Solutions |  Administrative &amp; Project Management Services</span><br>
+       <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;"></div>
+         <img style=" justify-content:center; max-width: 100px; padding: 0; max-height: 100px; left: 360px;margin-top: -20px; cursor: pointer;  z-index: -999; vertical-align: middle;  position:absolute;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" id="footer-logo" onclick="goHome()" />
 </footer>
-<script type="text/javascript" src="/public\app\static\index.mjs"></script>
-<script type="text/javascript" src="/src\app.mjs"></script>
-<script type="text/javascript" src="/public/app/static/js/express.mjs"></script>
+   <script type="text/javascript" src="/src/index.mjs"></script>
+   <script type="text/javascript" src="/src/app.js"></script>
+   <script type="text/javascript" src="/src/static/js/express.js"></script>
+</body>
 </html>
