--- a/src/static/pages/sources.html
+++ b/src/static/pages/sources.html
@@ -88,6 +88,7 @@
       <a class="accessibility-link" style="font-size: 12px; text-decoration: none; color:#aaafb2;"
          href="accessibility.html">Accessibility</a> |
       <a style="font-size: 12px; text-decoration: none; color:olivedrab;" href="sources.html">Sources</a>
+      | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/csspolicy.html">Policies</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/cssprocedure.html"> Procedures</a>
    </div>
    <span style="text-align: center; font-weight:bold; justify-content: center; "> <p>Pdubbs Solutions |
       Administrative &amp; Project Management Services </p> </span><br>
