--- a/public/index.html
+++ b/public/index.html
@@ -69,17 +69,16 @@
          </div>
    </div>
    <div>
-         <h1 id="dashboard-text" style="text-align: center; font-size: 2rem; margin-top: -15px; padding: 0;"><span>
-               Welcome to your Dashboard!</span></h1>
+         <h1 class="headingText" style="text-align: center; font-size: 2rem; margin-top: -15px; padding: 0;"><span>Welcome to your Dashboard!</span></h1>
    </div>
 </header>
 <body>
    <nav>
       <div class="icon-container">
          <div class="dashboard-icons">
-            <div class="icons" onclick="goToPage('/src/static/pages/products.html')">
+            <div class="icons" onclick="goToPage('src\static\pages\products.html')">
                <script src="https://cdn.lordicon.com/lordicon.js"></script>
-               <lord-icon src="/src\static\js\products_custom_icon.json" trigger="hover"
+               <lord-icon src="/src\static\pages\js\products_custom_icon.json" trigger="hover"
                   colors="primary:#a8738a,secondary:#aaafb2" style="width:65px;height:60px; top:5px; cursor: pointer;">
                </lord-icon>
                <p class="icon-label products" id="icon-label1" name="products">Prodcuts</p>
@@ -95,9 +94,9 @@
             </div>
          </div>
          <div class="dashboard-icons">
-            <div class="icons" onclick="goToPage('/public\app\static\pages\projects.html')">
-               <script src="/src/static/js/Folder open_custom_icon.json"></script>
-               <lord-icon src="/src/static/js/Folder open_custom_icon.json" trigger="hover"
+            <div class="icons" onclick="goToPage('/src\static\pages\projects.html')">
+               <script src="/src\static\pages\js\Folder open_custom_icon.json"></script>
+               <lord-icon src="/src\static\pages\js\Folder open_custom_icon.json" trigger="hover"
                   colors="primary:#aaafb2,secondary:#a8738a"
                   style="width:60px;height:60px; top: 4px; margin-bottom: 0; cursor: pointer;">
                </lord-icon>
@@ -106,17 +105,17 @@
          </div>
          <div class="dashboard-icons">
             <div class="icons" onclick="goToPage('/public\app\static\pages\reports.html')">
-               <script src="/src/static/js/Bar graph_custom_icon.json"></script>
-               <lord-icon src="/src/static/js/Bar graph_custom_icon.json" trigger="hover" colors="primary:#a8738a;"
+               <script src="/src\static\pages\js\Bar graph_custom_icon.json"></script>
+               <lord-icon src="/src\static\pages\js\Bar graph_custom_icon.json" trigger="hover" colors="primary:#a8738a;"
                   style="width:60px;height:60px; cursor: pointer; ">
                </lord-icon>
                <p class="icon-label reports" id="icon-label4" name="reports">Reports</p>
             </div>
          </div>
          <div class="dashboard-icons">
-            <div class="icons" onclick="goToPage('/public\app\static\pages\templates.html')">
-               <script src="/src\static\js\templates_custom_icon.json"></script>
-               <lord-icon src="/src\static\js\templates_custom_icon.json" trigger="hover"
+            <div class="icons" onclick="goToPage('/src\static\pages\templates.html')">
+               <script src="/src\static\pages\js\templates_custom_icon.json"></script>
+               <lord-icon src="/src\static\pages\js\templates_custom_icon.json" trigger="hover"
                   colors="primary:#a8738a,secondary:#aaafb2" style="width:60px;height:60px; cursor:pointer; ">
                </lord-icon>
                <p style="text-align: center; right:255px;" class="icon-label templates" id="icon-label5"
@@ -190,7 +189,7 @@
             <div style="display: inline; margin-top: 0px; text-decoration: none;" class="auth-buttons"><a
                   href="/src\static\pages\login.ejs">Login</a> | <a href="/src\static\pages\register.ejs">Register</a> |
                <a href="/src\static\pages\contact.html">Contact</a> | <a
-                  href="/public\app\static\pages\cart.html">Cart</a></div>
+                  href="/src/static/pages/cart.html">Cart</a></div>
             <br>
             <div class="ref-buttons">
                <a style="font-size: 12px; text-decoration: none; color:#aaafb2;"
@@ -198,7 +197,9 @@
                <a style="font-size: 12px; text-decoration: none; color:#aaafb2;"
                   href="/src\static\pages\accessibility.html">Accessibility</a> |
                <a style="font-size: 12px; text-decoration: none; color:#aaafb2;"
-                  href="//src\static\pages\sources">Sources</a>
+                  href="/src\static\pages\sources">Sources</a> |
+               <a style="font-size: 12px; text-decoration: none; color: #aaafb2;" 
+                  href="/src/static/pages/csspolicy.html">Policies &amp; Procedures</a>
             </div>
             <span style="display:inline; margin-top: 20px;">Pdubbs Solutions | Administrative &amp; Project Management
                Services</span><br>
