--- a/src/static/pages/about.html
+++ b/src/static/pages/about.html
@@ -12,7 +12,7 @@
            window.location.replace("https://pdubbssolutions.ca");
          }
       </script>
-      <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+      <script src="https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous"></script>
       <script defer src="/__/firebase/init.js?useEmulator=true"></script>
       <link rel="stylesheet"  type="text/css" href="/src/static/styles.css" />
       <title>Pdubbs Solutions | Dashboard</title>
@@ -50,7 +50,6 @@
    <header>
 
    </header>
-<body>
    
 </body>
 </html>
