--- a/src/static/pages/accessibility.html
+++ b/src/static/pages/accessibility.html
@@ -28,7 +28,7 @@
        <img style="z-index: -999; position: relative; top: 15px; max-width: 200px; padding: 0; display: block; margin: 0 auto; cursor: pointer; max-height: 200px;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" onclick="goHome()" />
    </header>
    <div class="accessibility-container" style="scroll-behavior: smooth; scrollbar-color: inherit; display:inline; flex-direction: column; text-align: center;max-width:550px;">
-      <h1 id="dashboard-text" style="text-align: center; font-size: 1.3rem; margin-top: -25px; padding: 0;"><span> Accessibilty Statement</span></h1><hr>
+      <h1 class="headingText"><span> Accessibilty Statement</span></h1><hr>
     <div class="accesibility" style="display:inline; flex-direction: column; text-align: center;max-width:550px;">
         <p class="content-paragraph"><br>
           <span class="bold">PDubbs Solutions </span> is commited to ensuring digital accessibility for people with disabilities. We are continually improving the user experience for everyone and applying the relvant accessibility standards.
@@ -53,7 +53,7 @@
       <div class="ref-buttons">
          <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src\static\pages\termsandconditions.html">Terms and Conditions</a> |
          <a style="font-size: 12px; text-decoration: none; color:olivedrab;" href="/src\static\pages\accessibility.html">Accessibility</a> |
-         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src\static\pages\sources.html">Sources</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/csspolicy.html">Policys &amp; Procedures</a>
+         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src\static\pages\sources.html">Sources</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/csspolicy.html">Policies &amp; Procedures</a>
       </div>
       <span style="display:inline; margin-top: 20px;" >Pdubbs Solutions |  Administrative &amp; Project Management Services</span><br>
       <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;"></div>
