--- a/src/static/pages/contact.html
+++ b/src/static/pages/contact.html
@@ -18,7 +18,7 @@
       <img style="z-index: -999; position: relative; top: 15px; max-width: 200px; padding: 0; display: block; margin: 0 auto; cursor: pointer; max-height: 200px;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" onclick="goHome()" />
   </header>
    <div class="contact-container">
-      <h1 id="dashboard-text" style="text-align: center; font-size: 1.3rem; margin-top: -25px; padding: 0 "><span> Contact Us</span></h1>
+      <h1 class="headingText"><span> Contact Us</span></h1>
          <form id="contactForm">
             <label for="first-name"></label>
             <input type="text" id="first-name" name="first-name" autocomplete="given-name" placeholder="First Name" required/>
@@ -45,9 +45,9 @@
            </select>
            <input type="text" id="otherDetailsInput1" style="display:none; margin-top:10px;" placeholder="Please specify the urgency of your contact request">
            <lablel for="message"></lablel>
-           <textarea id="message" name="message" placeholder="Enter your Message for Pdubbs Solutions here:" rows="1.3rem" required></textarea>
+           <textarea type="message" id="message" name="message" placeholder="Enter  Message for Pdubbs Solutions here:" rows="1.3rem" required></textarea>
            <label>
-            <input  style="left: -180px;display:inline-block; bottom: 253px; cursor: pointer;position:absolute;" type="checkbox" id="agreement" required><p style="font-size: 16px; justify-content: center; right: 255px;text-align: justify; display:block; position:absolute; cursor: pointer;"> I,<span id="userName"></span> agree to be contacted by PDubbs Solutions</p></label>
+            <input  style="display:flex;  cursor: pointer; position:absolute; align-items: left;" type="checkbox" id="agreement" required><p style="font-size: 14px;  text-align: left; display:flex; position:relative; cursor: pointer;"> I,  <span id="userName"> </span>agree to be contacted by PDubbs Solutions</p></label>
             <button style="display: block; margin-top: 30px;" type="submit">Submit</button>
             </form>
             <div id="confirmationMessage" style="display:none;">
@@ -62,6 +62,7 @@
       <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="termsandconditions.html">Terms and Conditions</a> |
       <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="accessibility.html">Accessibility</a> |
       <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="sources.html">Sources</a>
+      | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/csspolicy.html">Policies</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/cssprocedure.html"> Procedures</a>
    </div>
    <span style="display:inline; margin-top: 20px;" >Pdubbs Solutions |  Administrative &amp; Project Management Services</span><br>
    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;"></div>
